fixed the horizontal scroll bar by adding margin and padding globally to the stlye

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,8 @@ body{
 h1{
     font-weight: 400;
 }
+
+.container {
+    margin: 0.5rem;
+    padding: 0.5rem ;
+}
